--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "Ubuntu";
     font-size: "25px";
     text-align: center;
-    background-color: #1c9a54;
+    background-color: #737373;
     background-repeat: no-repeat;
     background-size: cover
 }
