--- a/public/index.css
+++ b/public/index.css
@@ -7,8 +7,8 @@ body {
     background-size: cover
 }
 
-.container {
-    margin-top: 10%;
+container {
+    margin-top: 30%;
     font-family: "Ubuntu";
     font-size: "50px";
     color: #FFF;
